# samplitude

./: .gitignore  Main.hs  Makefile  amplibank.cabal  app-readme.txt  banklists.txt  freq.txt  reaper.bat  samplitude.cabal  stack.yaml
src/: Amplitude.hs  Audio.hs  Frequency.hs  HexView.hs  Main.hs  Reaper.hs
