name:               amplibank
version:            0.0.1
license:            BSD3
author:             Michael Tolly
maintainer:         miketolly@gmail.com
build-type:         Simple
cabal-version:      >= 1.10

executable amplibank
  build-depends:      base, zlib, bytestring, binary, directory, filepath, transformers, conduit-audio, conduit, vector, resourcet, midi, midi-util, event-list, non-negative, conduit-audio-samplerate
  main-is:            Main.hs
  ghc-options:        -Wall -O
  default-language:   Haskell2010
